--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -92,4 +92,21 @@
     }
   }
   
-  
+  /* Add this to HomePage.css */
+/* Add this to HomePage.css */
+.hire-me-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 5px 10px; /* Adjust the padding for small size */
+  font-size: 14px; /* Adjust the font size for small size */
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  width: 20%; /* Set the width to 100% */
+}
+
+.hire-me-button:hover {
+  background-color: #0056b3;
+}
+
