--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -72,4 +72,24 @@
       margin-right: 20px;
     }
   }
+
+  /* Navbar.css */
+.navbar {
+  background-color: #ffffff; /* Light mode background color */
+}
+
+.navbar-dark {
+  background-color: #333333; /* Dark mode background color */
+}
+
+.nav-link .fa-icon {
+  transition: transform 0.2s ease-in-out; /* Icon animation */
+}
+
+/* Dark mode styles */
+.dark-mode {
+  background-color: #333333;
+  color: #ffffff;
+}
+
   
